--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
+    "join-js": "^1.1.2",
     "knex": "^0.95.13",
     "nodemon": "^2.0.14",
     "pg": "^8.7.1"
