--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "faker": "^5.5.3",
+    "fs": "*",
     "join-js": "^1.1.2",
     "knex": "^0.95.13",
     "nodemon": "^2.0.14",
