--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "start": "nodemon ./src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest ./src --maxWorkers=1 --coverage --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -24,9 +24,15 @@
     "express-fileupload": "^1.2.1",
     "faker": "^5.5.3",
     "fs": "*",
+    "jest": "^27.3.1",
     "join-js": "^1.1.2",
     "knex": "^0.95.13",
     "nodemon": "^2.0.14",
     "pg": "^8.7.1"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
