--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "start": "nodemon ./src/index.js",
-    "test": "jest ./src --maxWorkers=1 --coverage --detectOpenHandles"
+    "test": "jest ./src --maxWorkers=1 --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -28,7 +28,8 @@
     "join-js": "^1.1.2",
     "knex": "^0.95.13",
     "nodemon": "^2.0.14",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "supertest": "^6.1.6"
   },
   "jest": {
     "testPathIgnorePatterns": [
