--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "start": "nodemon ./src/index.js",
-    "test": "jest ./src --maxWorkers=1 --detectOpenHandles"
+    "test": "jest ./src --maxWorkers=1 --coverage --detectOpenHandles"
   },
   "repository": {
     "type": "git",
