--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,26 @@
-version: '3.9'
+version: '3'
 
 services:
-  server:
+  api:
     container_name: werkstuk_api
     build: './api'
-    ports:
-      - '3000:3000'
-  db:
-    container_name: werkstuk_database
-    image: 'postgres:13'
-    ports:
-     - "5432:5432"
-    volumes:
-      - data:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: dev_werkstuk
-      POSTGRES_PASSWORD: 'postgres'
-      POSTGRES_USER: 'postgres'
-    
-
-volumes:
-  data:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DB: werkstuk_dev
+      POSTGRES_HOST: werkstuk_db
+    ports:
+      - 3000:3000
+    volumes:
+      - ./api/src:/workdir/src
+  db:
+    container_name: werkstuk_db   
+    image: postgres:latest
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DB: werkstuk_dev
+      POSTGRES_HOST_AUTH_METHOD: trust
+    ports:
+      - 5432:5432
