--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - 3000:3000
     volumes:
       - ./api/src:/workdir/src
+      - ./api/uploads:/workdir/videos
   db:
     container_name: werkstuk_db   
     image: postgres:latest
