--- a/api/.gitignore
+++ b/api/.gitignore
@@ -41,6 +41,9 @@ build/Release
 node_modules/
 jspm_packages/
 
+# Folder of uploaded file
+uploads/*
+
 # TypeScript v1 declaration files
 typings/
 
